--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "server": "npm i && node server.js"
   },
   "dependencies": {
-    "ws": "^8.0.0"
+    "ejs": "^3.1.10",
+    "express": "^4.18.2",
+    "express-ws": "^5.0.0"
   },
   "author": "",
   "license": "ISC"
